--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
   <html lang="en-US"><head><title>Hacked By Mr.R</title>Wadaw -R<meta property="og:title" content="Was Here">  
-<meta charset="UTF-8"> <style>body{background:#000; cursor: url(http://cur.cursors-4u.net/cursors/cur-9/cur862.ani), url(http://cur.cursors-4u.net/cursors/cur-9/cur862.png), progress !important; } </style><style>style type="text/css">
+<meta charset="UTF-8"> <style>body{background:##FFFFFF; cursor: url(http://cur.cursors-4u.net/cursors/cur-9/cur862.ani), url(http://cur.cursors-4u.net/cursors/cur-9/cur862.png), progress !important; } </style><style>style type="text/css">
 	p {
   font-family: "Times New Roman", Times, serif;
 }
